# MrProgDiscordBot

./: MANIFEST.in  install-rabbitmq.sh  install.sh  pyproject.toml  update.sh
.github/workflows/: deploy.yml
src/mrprog/bot/: autocomplete.py  bot.py  fuzzy.py  rpc_client.py  supported_games.py  utils.py
src/mrprog/bot/cogs/: admin.py  info.py  save.py  trade.py
src/mrprog/bot/stats/: trade_stats.py
